# deskworks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  deskworks.toml.example  localmind.toml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deskworks/: __init__.py  cli.py  config.py  core.py  dashboard.py  ingest.py  web.py
docs/: ARCHITECTURE.md  PROVIDERS.md
examples/sample_docs/: welcome.md
localmind/: __init__.py  cli.py  config.py  core.py  dashboard.py  summarize.py  web.py
service/: com.deskworks.brain.plist.example  com.localmind.brain.plist.example  deskworks.service.example  localmind.service.example
tests/: test_config.py  test_core.py  test_text.py  test_web.py
