[project]
name = "deskworks"
version = "0.1.0"
description = "Your private, always-on AI over your own documents. 100% local, zero API tokens, any OpenAI-compatible model."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jatin Rawtani" }]
requires-python = ">=3.10"
keywords = ["rag", "local-llm", "ollama", "embeddings", "bm25", "second-brain", "offline", "privacy"]

dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.6",
    "rank-bm25>=0.2.2",
    "flask>=3.0",
    "pypdf>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# nicer PDF extraction if you have it; pdftotext (poppler) is auto-used if on PATH
extras = ["pdfplumber>=0.11"]

[project.scripts]
deskworks = "deskworks.cli:main"

[project.urls]
Homepage = "https://github.com/Jatin-Rawtani/deskworks"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deskworks*"]
